<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="42sp" />

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <Button
        android:id="@+id/btn_postar"
        android:onClick="postar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_postar" />

    <Button
        android:id="@+id/btn_ver"
        android:onClick="ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ver" />
    </LinearLayout>
    
</LinearLayout>