<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nome" />

    <EditText
        android:id="@+id/edt_nome_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_protesto" />

    <EditText
        android:id="@+id/edt_protesto_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_atualizar_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_atualizar" />
</LinearLayout>