<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nome" />
    
    <EditText 
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_protesto" />
    
    <EditText 
        android:id="@+id/edt_protesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
    <Button 
        android:id="@+id/btn_enviar"
        android:onClick="protestar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/btn_enviar" />
    </LinearLayout>
</LinearLayout>
